--- a/client/views/order.ejs
+++ b/client/views/order.ejs
@@ -86,9 +86,29 @@
  -->
           <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
           <script>
+            function getMeal() {
+                            var fuck = [
+                              {"core": [{"name": "Our Famous Porterhouse Steak", "price": 32.95, "rest": {"phone": "718-439-1403", "id": 29094, "name": "George's Restaurant"}, "id": "24438077", "options": {"Soup or Salad": [{"price": 0.0, "desc": "", "id": "27905302", "name": "Soup - Manhattan Clam Chowder"}], "Choice of Meat Preparation": [{"price": 0.0, "desc": "", "id": "24438100", "name": "Medium Rare"}]}, "desc": ""}], "total": 32.95} , {"core": [{"price": 36.95, "desc": "Mixed seafood, rice, lobster, shrimp, mussels, clams, octopus and scallions. ", "id": "22813647", "rest": {"phone": "718-965-7299", "id": 27445, "name": "El Viejo Yayo"}, "name": "Paella -  For Two (2)"}], "total": 36.95} , {"core": [{"name": "Mura Sushi (for 2)", "price": 37.5, "rest": {"phone": "718-965-1288", "id": 30772, "name": "Mura"}, "id": "26086798", "options": {"Choice of Side": [{"price": 0.0, "desc": "", "id": "26086800", "name": "Soup"}]}, "desc": "16 pcs assorted sushi and two chef's special roll."}], "total": 37.5} , {"core": [{"price": 24.95, "desc": "Prosciutto (imported), mushrooms and arugula.", "id": "26958388", "rest": {"phone": "718-768-2222", "id": 30987, "name": "Tommy's Famous Cheesesteaks & Pizza"}, "name": "Prosciutto Pie - 18 inch Large"}], "total": 24.95} , {"core": [{"price": 30.0, "desc": "Red vegetarian beans.", "id": "23078100", "rest": {"phone": "718-369-2020", "id": 27711, "name": "Colombia Restaurant (Catering)"}, "name": "Frijoles"}], "total": 30.0} , {"core": [{"name": "Twin Lobster Tail Solo Hibachi", "price": 33.0, "rest": {"phone": "718-783-1888", "id": 31591, "name": "Sawa"}, "id": "27032169", "options": {"Choice of Kitchen Entrees": [{"price": 0.0, "desc": "", "id": "27032175", "name": "Msio Soup"}]}, "desc": ""}], "total": 33.0} , {"core": [{"price": 25.0, "desc": "Grilled shrimp, juicy tender sirloin, grilled marinated chicken breast, hot chorizo, shrimp and arepa, green salad and rice.", "id": "22856061", "rest": {"phone": "718-369-2020", "id": 27485, "name": "Colombia Restaurant"}, "name": "Parrillada Colombia"}], "total": 25.0} , {"core": [{"price": 24.95, "desc": "Prosciutto (imported), mushrooms and arugula.", "id": "26958388", "rest": {"phone": "718-768-2222", "id": 30987, "name": "Tommy's Famous Cheesesteaks & Pizza"}, "name": "Prosciutto Pie - 18 inch Large"}], "total": 24.95} , {"core": [{"name": "T-Bone Steak Entree", "price": 26.45, "rest": {"phone": "718-768-3410", "id": 26004, "name": "The 7th Avenue Donut Shop Diner"}, "id": "21464354", "options": {"Choice of Side": [{"price": 0.0, "desc": "", "id": "21464371", "name": "Cup of Chicken Noodle Soup"}], "Choice of Meat Preparation": [{"price": 0.0, "desc": "", "id": "21464360", "name": "Well Done"}], "Choice of Potato": [{"price": 0.0, "desc": "", "id": "21464368", "name": "French Fries"}], "Choice of Vegetable": [{"price": 0.0, "desc": "", "id": "21464363", "name": "Corn"}]}, "desc": "16 oz. Topped with Fried Onions and Mushrooms."}], "total": 26.45} , {"core": [{"price": 25.0, "desc": "", "id": "24347246", "rest": {"phone": "718-369-2575", "id": 28985, "name": "Monsignor's Restaurant"}, "name": "Pinot Grigio - Bottle"}], "total": 25.0},{"core": [{"name": "Spinach Artic Signature Pizzahoke - Regular", "price": 24.95, "rest": {"phone": "718-722-7200", "id": 31760, "name": "Pizza Cotta Bene"}, "id": "28380260", "options": {"Extra Pizza Toppings": [{"price": 4.0, "desc": "", "id": "28380279", "name": "Spinach"}]}, "desc": "Lioni fresh Mozzarella, spinach, marinated artichokes, and special sauce."}], "total": 28.95} , {"core": [{"name": "Penne with Alfredo Sauce Family Special", "price": 28.95, "rest": {"phone": "718-768-1700", "id": 31680, "name": "Brothers Pizza"}, "id": "27131439", "options": {"Extras & Add-Ons": [{"price": 1.0, "desc": "", "id": "27131445", "name": "Blue Cheese Dressing"}]}, "desc": ""}], "total": 29.95} , {"core": [{"price": 26.0, "desc": "One (1) whole chicken, French fries with sausage, avocado salad and white rice and black beans.", "id": "24134236", "rest": {"phone": "718-369-4964", "id": 28723, "name": "La Cuarta Restaurant"}, "name": "La Cuarta Familiar"}], "total": 26.0} , {"core": [{"price": 26.0, "desc": "One (1) whole chicken, French fries with sausage, avocado salad and white rice and black beans.", "id": "24134236", "rest": {"phone": "718-369-4964", "id": 28723, "name": "La Cuarta Restaurant"}, "name": "La Cuarta Familiar"}], "total": 26.0} , {"core": [{"price": 26.0, "desc": "One (1) whole chicken, French fries with sausage, avocado salad and white rice and black beans.", "id": "24134236", "rest": {"phone": "718-369-4964", "id": 28723, "name": "La Cuarta Restaurant"}, "name": "La Cuarta Familiar"}], "total": 26.0} , {"core": [{"name": "Sushi Sashimi Combo", "price": 26.5, "rest": {"phone": "347-889-5252", "id": 31769, "name": "Asea Fusion & Yakitori Lounge"}, "id": "28388444", "options": {"Choice of Side": [{"price": 0.0, "desc": "", "id": "28388446", "name": "Miso Soup"}]}, "desc": "5 pieces sushi, 10 pieces sashimi and California roll."}], "total": 26.5} , {"core": [{"name": "Spinach Artic Signature Pizzahoke - Regular", "price": 24.95, "rest": {"phone": "718-722-7200", "id": 31760, "name": "Pizza Cotta Bene"}, "id": "28380260", "options": {"Extra Pizza Toppings": [{"price": 4.0, "desc": "", "id": "28380264", "name": "Fire Roasted Peppers"}, {"price": 6.0, "desc": "", "id": "28380295", "name": "Fried Eggplant"}]}, "desc": "Lioni fresh Mozzarella, spinach, marinated artichokes, and special sauce."}], "total": 34.95} , {"core": [{"price": 24.0, "desc": "Marinated in buttermilk, blessed with Frank's, served with celery, carrots & blue cheese.", "id": "24096193", "rest": {"phone": "718-857-1950", "id": 28667, "name": "Zito's Sandwich Shoppe"}, "name": "Sixpoint Battered Anchor Wings - 24 pcs"}], "total": 24.0} , {"core": [{"name": "T-Bone Steak Entree", "price": 26.45, "rest": {"phone": "718-768-3410", "id": 26004, "name": "The 7th Avenue Donut Shop Diner"}, "id": "21464354", "options": {"Choice of Side": [{"price": 0.0, "desc": "", "id": "21464371", "name": "Cup of Chicken Noodle Soup"}], "Choice of Meat Preparation": [{"price": 0.0, "desc": "", "id": "21464357", "name": "Medium"}], "Choice of Potato": [{"price": 0.0, "desc": "", "id": "21464369", "name": "Mashed Potato"}], "Choice of Vegetable": [{"price": 0.0, "desc": "", "id": "21464362", "name": "Broccoli"}]}, "desc": "16 oz. Topped with Fried Onions and Mushrooms."}], "total": 26.45} , {"core": [{"name": "Spinach Artic Signature Pizzahoke - Regular", "price": 24.95, "rest": {"phone": "718-722-7200", "id": 31760, "name": "Pizza Cotta Bene"}, "id": "28380260", "options": {"Extra Pizza Toppings": [{"price": 4.0, "desc": "", "id": "28380273", "name": "Anchovies"}]}, "desc": "Lioni fresh Mozzarella, spinach, marinated artichokes, and special sauce."}], "total": 28.95},
+                        ];
+              var base_url = "http://localhost:8080/";
+              var price = document.getElementById("price").value;
+              // $.ajax({
+              //   url:base_url + "meal/" + 7447 + "/" + price +"/"+"Home"
+              // })
+              // .done(function (data) {
+              //   localStorage.setItem("order", JSON.stringify(data));
+              //   console.log(localStorage.getItem("order"));
+              // });
+  
+              var order = fuck[Math.floor(Math.random() * fuck.length)]; //JSON.parse(localStorage.getItem("order"));
+              console.log(order);
+              localStorage.setItem("order", JSON.stringify(order));
+              return order;
+            }
             function maniaTime()
             {
               localStorage.setItem("lameness", 0);
+              getMeal();
               window.location="finish";
             }
             function lameTime()
@@ -96,18 +116,9 @@
               localStorage.setItem("lameness", 1);
             }
             function showMeal() {
-              var base_url = "http://mealmaniac.com:8080/";
-              var price = document.getElementById("price").value;
-              $.ajax({
-                url:base_url + "meal/" + 7447 + "/" + price +"/"+"Home"
-              })
-              .done(function (data) {
-                localStorage.setItem("order", JSON.stringify(data));
-                console.log(localStorage.getItem("order"));
-              });
 
-              var order = JSON.parse(localStorage.getItem("order"));
-              if (order["core"].length==undefined) {
+              order = getMeal();
+              if (order.core.length==undefined) {
                 document.getElementById('dishname').innerHTML=order["core"]["name"];
                 document.getElementById('restaurant').innerHTML=order["core"]["rest"]["name"];
                 document.getElementById('totalprice').innerHTML="$"+(parseInt(100*order.total))/100.0;
