client side hack

--- a/client/views/frontPage.ejs
+++ b/client/views/frontPage.ejs
@@ -4,7 +4,7 @@
   
   <div align="center">
     </br>
-    <img src="img/Logo.png" >
+    <a href="http://mealmaniac.com/order"><img src="img/Logo.png" ></a>
     </br></br></br></br>
     <form class="form-sign-in">
       <div>
