--- a/client/views/order.ejs
+++ b/client/views/order.ejs
@@ -9,7 +9,8 @@
     
     <div class="page-header" align="center">
       <h1>
-      <img src="img/Logo.png" ><a href="settings">
+      <a href="http://mealmaniac.com/order"><img src="img/Logo.png" ></a>
+      <a href="settings">
         <img src="http://www.clker.com/cliparts/j/V/R/4/3/s/cog-cogwheel-gear-zahnrad-md.png" height="20" width="20" class="img-responsive" alt="Responsive image">
       </a></h1>
     </div>
