--- a/client/views/signup.ejs
+++ b/client/views/signup.ejs
@@ -1,5 +1,14 @@
 <html>
 <head>
+
+	<meta property="og:title" content="MealManiac - Picking a meal has never been so simple" />
+	<meta property="og:type" content="company" />
+	<meta property="og:site_name" content="MealManiac - Picking a meal has never been so simple" />
+	<meta property="og:description" content="Can't decide what to eat? Stuck considering possibilities for hours at a time?
+	Ponder no more! MealManiac will give you an entire orders geared to your tastes with the click of a button. Another click and the meal will be on its way to your address! For the <em>maniacal</em> ones, we'll send a random meal straight to your door! All with the click of a button." />
+	<meta property="og:url" content="mealmaniac.com" />
+	<meta property="og:image" content="" />
+	
 </head>
 <body>
 
