added signup sheet

--- a/client/views/signup.ejs
+++ b/client/views/signup.ejs
@@ -1,6 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-
+    <meta charset="utf-8">
 	<meta property="og:title" content="MealManiac - Picking a meal has never been so simple" />
 	<meta property="og:type" content="company" />
 	<meta property="og:site_name" content="MealManiac - Picking a meal has never been so simple" />
@@ -8,7 +9,7 @@
 	Ponder no more! MealManiac will give you an entire orders geared to your tastes with the click of a button. Another click and the meal will be on its way to your address! For the <em>maniacal</em> ones, we'll send a random meal straight to your door! All with the click of a button." />
 	<meta property="og:url" content="mealmaniac.com" />
 	<meta property="og:image" content="" />
-	
+
 </head>
 <body>
 
